--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,38 @@
 
+name: Auto-Process Acoustic Data
+
+on:
+  push:
+    paths:
+      - 'data/raw/**'  # Only runs when files in the raw data folder change
+
+jobs:
+  process-and-file:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write  # Allows the bot to "write" the results back to your repo
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      - name: Install Dependencies
+        run: |
+          pip install -r requirements.txt
+
+      - name: Run Extraction Engine
+        run: |
+          python src/extraction_engine.py
+
+      - name: Commit and Push Results
+        run: |
+          git config --global user.name "GitHub Actions Bot"
+          git config --global user.email "actions@github.com"
+          git add data/processed/*.json
+          # Only commit if there are changes to avoid errors
+          git diff --quiet && git diff --staged --quiet || (git commit -m "Auto-update: New Hilbert Vector extracted" && git push)
